--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -90,11 +90,14 @@
 
 <script type="text/javascript" src="{{ static('js/logic/handlers/main.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle_type.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/logic/handlers/vehicle_feature_type.js') }}"></script>
+
 
 <script type="text/javascript">
     window.handlers = {
         main: mainHandler,
-        vehicleType: vehicleTypeHandler
+        vehicleType: vehicleTypeHandler,
+        vehicleFeatureType: vehicleFeatureTypeHandler
     };
 
 </script>
