Сделал рабочего человека Collection теперь может в avatar collection form умеет disable optionsfield

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -91,13 +91,15 @@
 <script type="text/javascript" src="{{ static('js/logic/handlers/main.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle_type.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle_feature_type.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/logic/handlers/person.js') }}"></script>
 
 
 <script type="text/javascript">
     window.handlers = {
         main: mainHandler,
         vehicleType: vehicleTypeHandler,
-        vehicleFeatureType: vehicleFeatureTypeHandler
+        vehicleFeatureType: vehicleFeatureTypeHandler,
+        person: personHandler
     };
 
 </script>
