Изменил FreeRegNum Добавил пару PL/SQL функций для FreeRegNum Добавил начало FreeRegNum Исправил "Ну нахер" в модальном окошко

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -60,7 +60,7 @@
         <p id="modal-text"></p>
     </div>
     <div class="modal-footer">
-        <a class=" modal-action modal-close waves-effect waves-red btn-flat">Ну нахер</a>
+        <a class=" modal-action modal-close waves-effect waves-red btn-flat">Отмена</a>
         <a id="modal-agree" class=" modal-action modal-close waves-effect waves-green btn-flat">Поехали</a>
     </div>
 </div>
@@ -75,7 +75,6 @@
 <script type="text/javascript" src="{{ static('js/logic/utils/date_diff.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/utils/ajax.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/utils/delayed_send.js') }}"></script>
-
 
 <script type="text/javascript" src="{{ static('js/logic/helpers/dom.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/helpers/progress.js') }}"></script>
