Почти прикрутил машины (осталось дописать триггеры для рег.номера

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -91,6 +91,7 @@
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle_type.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle_feature_type.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/person.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/logic/handlers/vehicle.js') }}"></script>
 
 
 <script type="text/javascript">
@@ -98,7 +99,8 @@
         main: mainHandler,
         vehicleType: vehicleTypeHandler,
         vehicleFeatureType: vehicleFeatureTypeHandler,
-        person: personHandler
+        person: personHandler,
+        vehicle: vehicleHandler
     };
 
 </script>
