Прикрутил типы ДТП Больше адекватных сообщений об ошибках

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -92,6 +92,7 @@
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle_feature_type.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/person.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/logic/handlers/crash_type.js') }}"></script>
 
 
 <script type="text/javascript">
@@ -100,7 +101,8 @@
         vehicleType: vehicleTypeHandler,
         vehicleFeatureType: vehicleFeatureTypeHandler,
         person: personHandler,
-        vehicle: vehicleHandler
+        vehicle: vehicleHandler,
+        crashType: crashTypeHandler
     };
 
 </script>
