Прикрутил ДТП Добавил ещё немного сахара

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -93,6 +93,7 @@
 <script type="text/javascript" src="{{ static('js/logic/handlers/person.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/vehicle.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/logic/handlers/crash_type.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/logic/handlers/crash.js') }}"></script>
 
 
 <script type="text/javascript">
@@ -102,7 +103,8 @@
         vehicleFeatureType: vehicleFeatureTypeHandler,
         person: personHandler,
         vehicle: vehicleHandler,
-        crashType: crashTypeHandler
+        crashType: crashTypeHandler,
+        crash: crashHandler
     };
 
 </script>
